Fix depositToReciever and update sepositFromSender
