# src/public/swagger.json
@@ -145,7 +145,7 @@
       }
     },
 
-    "/deposit": {
+    "/depositFromSender": {
       "post": {
         "tags": ["Deposit"],
         "summary": "Get wallet with given ID",
@@ -155,7 +155,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/definitions/Deposit"
+                "$ref": "#/definitions/DepositFromSender"
               }
             }
           }
@@ -165,7 +165,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/Deposit"
+              "$ref": "#/definitions/DepositFromSender"
             }
           },
           "404": {
@@ -184,7 +184,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/definitions/DepositToReceive"
+                "$ref": "#/definitions/DepositToReceiver"
               }
             }
           }
@@ -194,7 +194,7 @@
           "200": {
             "description": "OK",
             "schema": {
-              "$ref": "#/definitions/DepositToReceive"
+              "$ref": "#/definitions/DepositToReceiver"
             }
           },
           "404": {
@@ -294,7 +294,20 @@
         }
       }
     },
-    "DepositToReceive": {
+    "DepositFromSender": {
+      "type": "object",
+      "properties": {
+        "amountInEthers": {
+          "type": "string",
+          "example": "0.00001"
+        },
+        "senderId": {
+          "type": "number",
+          "example": 2
+        }
+      }
+    },
+    "DepositToReceiver": {
       "type": "object",
       "properties": {
         "amountInEthers": {
